bk_ida/gccida/g2/expand_inline_function
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_inline_function/src/integrate.c:1136:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v24; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_inline_function/src/integrate.c:1138:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v26; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_inline_function/src/integrate.c:1146:4: error: expected ';' after expression
rtx v34; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_inline_function/src/integrate.c:1146:5: error: use of undeclared identifier 'v34'
rtx v34; // r15 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_inline_function/src/integrate.c:1151:4: error: expected ';' after expression
rtx v39; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_inline_function/src/integrate.c:1151:5: error: use of undeclared identifier 'v39'
rtx v39; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_inline_function/src/integrate.c:1153:4: error: expected ';' after expression
rtx v41; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_inline_function/src/integrate.c:1153:5: error: use of undeclared identifier 'v41'
rtx v41; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_inline_function/src/integrate.c:1155:6: error: use of undeclared identifier 'v43'
rtx *v43; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_inline_function/src/integrate.c:1157:6: error: use of undeclared identifier 'v45'
rtx *v45; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_inline_function/src/integrate.c:1160:4: error: expected ';' after expression
rtx last_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_inline_function/src/integrate.c:1160:5: error: use of undeclared identifier 'last_insn'
rtx last_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_inline_function/src/integrate.c:1165:4: error: expected ';' after expression
rtx v53; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_inline_function/src/integrate.c:1165:5: error: use of undeclared identifier 'v53'
rtx v53; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_inline_function/src/integrate.c:1166:4: error: expected ';' after expression
rtx v54; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_inline_function/src/integrate.c:1166:5: error: use of undeclared identifier 'v54'
rtx v54; // r13 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_inline_function/src/integrate.c:1167:4: error: expected ';' after expression
rtx v55; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_inline_function/src/integrate.c:1167:5: error: use of undeclared identifier 'v55'
rtx v55; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_inline_function/src/integrate.c:1168:4: error: expected ';' after expression
rtx v56; // r15 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_inline_function/src/obj/integrate.o] Error 1
